<resources>
    <string name="app_name">Pickup</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">481034845414002</string>
    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>

    <string name="user_profile">User Profile</string>
    <string name="user_logout">Log Out</string>

    <string name="event_name_text">Event Name</string>
    <string name="event_creator_text">Creator</string>
    <string name="event_sport_text">Sport</string>
    <string name="event_location_text">Location</string>
    <string name="event_time_text">Time</string>
    <string name="event_date_text">Date</string>
    <string name="etxt_fromdate">Date</string>
    <string name="event_gender_text">Gender</string>
    <string name="event_age_group_text">Age Group</string>
    <string name="event_max_num_ppl_text">Max # Ppl</string>
    <string name="event_min_user_rating_text">Min Rating</string>

    <string name="create_event_btn_txt">Create Event</string>
    <string name="edit_event_btn_txt">Edit Event</string>
    <string name="delete_event_btn_txt">Delete Event</string>
    <string name="save_changes_event_btn_txt">Save Changes</string>

    <string-array name="gender_array">
        <item>Any</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <drawable name="white">#ffffff</drawable>
    <drawable name="green">#008000</drawable>
    <drawable name="yellow">#FFFF00</drawable>
    <drawable name="black">#181818</drawable>
    <drawable name="gray">#C0C0C0</drawable>
    <string name="login_pickup_text">PickUp</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_btn_txt">Login</string>

    <string name="edit_label_text">Edit Settings</string>
    <string name="save_settings_btn_txt">Save</string>
    <string name="forgot_passwd_btn_txt"><u>Forgot Your Password?</u></string>
    <string name="reset_paswd_btn_txt">Reset Password</string>
    <string name="create_acct_label_text">Create Account</string>
    <string name="create_acct_first_name_text">First Name</string>
    <string name="create_acct_last_name_text">Last Name</string>
    <string name="create_acct_email_text">Email</string>
    <string name="create_acct_password_text">Password</string>
    <string name="create_acct_retype_text">Retype Password </string>
    <string name="create_acct_gender_text">Gender</string>
    <string name="create_acct_male_text">Male</string>
    <string name="create_acct_female_text">Female</string>
    <string name="create_acct_bday_text">Birthday</string>
    <string name="create_acct_day_text">Day</string>
    <string name="create_acct_month_text">Month</string>
    <string name="create_acct_year_text">Year</string>

    <string name="create_acct_btn_txt">Create Account</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="upload_btn_txt">Upload Picture</string>

    <string name="password_rest_label">Reset Password</string>
    <string name="old_text">Current</string>
    <string name="new_text">New</string>
    <string name="retype_text">Retype New</string>

    <string name="send_email_btn_txt">Send Email</string>
    <string name="rest_desc_text">Please enter your email address and we will send you instructions for resetting your password:</string>
    <string name="rest_passwd_label_txt">Reset Password</string>
    <string-array name="sport_array">
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Handball</item>
        <item>Ice Hockey</item>
        <item>Football</item>
        <item>Racquetball</item>
        <item>Roller Hockey</item>
        <item>Softball</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>

    <string-array name="bday_month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

</resources>