<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventLinearLayout1"
    android:background="@drawable/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/eventTableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_name_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:ems="5"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical">
                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/eventTableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_sport_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/sport_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/gray"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/event_sport_text"
                    />

            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_location_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"
                    android:ems="10"
                    android:maxWidth="5dp"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical">
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_date_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"
                    android:hint="@string/event_date_text" />
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_time_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"
                    android:hint="@string/event_time_text" />
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_gender_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black" />
            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_age_group_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/GridLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:columnCount="2"
                    android:rowCount="1"
                    android:orientation="horizontal" >

                    <Spinner
                        android:id="@+id/age_min_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:background="@drawable/gray"
                        android:textColor="@drawable/black" />
                    <Spinner
                        android:id="@+id/age_max_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:background="@drawable/gray"
                        android:textColor="@drawable/black" />

                </GridLayout>

            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_max_num_ppl_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/max_num_ppl_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"/>

            </TableRow>
            <TableRow
                android:id="@+id/eventTableRow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TextView
                    android:id="@+id/eventTextView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@drawable/green"
                    android:text="@string/event_min_user_rating_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/min_user_rating_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/gray"
                    android:textColor="@drawable/black"/>

            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/event_create_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/green"
                android:text="@string/create_event_btn_txt"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/event_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@drawable/green"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>